# video-whisper-test

./: .gitignore  api.py  pyproject.toml  stt_model.py  ui.py
