[tool.poetry]
name = "20230821-faster-whisper-test"
version = "0.1.0"
description = ""
authors = ["oogamin-gu <oogamin-gu@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
faster-whisper = "^0.7.1"
gradio = "^3.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
